--- a/package.json
+++ b/package.json
@@ -7,25 +7,28 @@
     "lint": "eslint ./ --ext js,jsx,ts,tsx"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "date-fns": "^2.28.0",
-    "next": "^12.2.2",
+    "@heroicons/react": "^2.0.8",
+    "date-fns": "^2.29.2",
+    "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.19.0",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.17",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.1",
-    "postcss": "^8.4.14",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.1",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.2"
   }
 }
